--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "description": "https://github.com/vladLensky/frontend-project-44/actions)",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Vladimir Lensky",
   "license": "ISC",
   "bin": {
     "brain-games": "bin/brain-games.js",
